[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "floh4x"
version = "0.1.0"
description = "Download videos from the FloGrappling CDN"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
]

[project.scripts]
floh4x = "floh4x.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/floh4x"]
